@@ -36,21 +36,5 @@
             android:textSize="14sp" />
 
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:orientation="horizontal" >
-
-        <Button
-            android:id="@+id/server_remove"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/button_remove"
-            android:focusable="false" 
-            android:clickable="true" />
-    </LinearLayout>
  
 </RelativeLayout>
