@@ -1,0 +1,11 @@
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <item
+        android:id="@+id/action_editsrv"
+        android:title="@string/action_editsrv"/>
+
+    <item
+        android:id="@+id/action_removesrv"
+        android:title="@string/action_removesrv"/>
+
+</menu>
